# point-vortex

./: .gitignore  Cargo.toml
ftle/: Cargo.toml
ftle/src/: config.rs  main.rs
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  problem.rs
pv/: Cargo.toml
pv/src/: config.rs  main.rs
src/: config.rs  error.rs  ftle.rs  kernel.rs  main.rs  poincare_section.rs  problem.rs  tracker.rs  trajectory.rs  utils.rs
src/ftle/: config.rs  mod.rs
src/poincare_section/: config.rs  mod.rs
src/trajectory/: config.rs  mod.rs
time-stepper/: Cargo.toml
time-stepper/src/: config.rs  error.rs  problem.rs
