[workspace]
members = ["pv", "ftle", "lib"]
default-members = ["pv", "ftle"]
resolver = "2"

[workspace.package]
authors = ["Mac Lee <mal004@ucsd.edu>"]
version = "0.2.0"
description = "Study point vortex dynamics under SQG+"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
incremental = false
