[package]
name = "pv"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.35"
clap = { version = "4.2", features = ["derive"]}
main_error = "0.1.2"
npyz = { version = "0.8", features = ["derive"]}
rayon = "1.10.0"
serde = { version = "1.0", features = ["serde_derive"] }
toml = "0.7"

time-stepper = { path = "../time-stepper" }

[[bin]]
name = "pv"
path = "src/main.rs"
